Fix cities-grid flex property not to stretch

--- a/src/Cities/Cities.css
+++ b/src/Cities/Cities.css
@@ -4,7 +4,7 @@
   max-width: var(--content-max-width);
   margin: 0;
   padding: 1em;
-  flex: 1 1 auto;
+  flex: 0 1 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, 12em);
   justify-content: center;
